RESOLVED FIXED170638
WebAssembly: Fix issue with BrTable targeting a Loop
https://bugs.webkit.org/show_bug.cgi?id=170638
Summary WebAssembly: Fix issue with BrTable targeting a Loop
Keith Miller
Reported 2017-04-07 20:10:09 PDT
WebAssembly: Fix issue with BrTable targeting a Loop
Attachments
Patch (3.21 KB, patch)
2017-04-07 20:12 PDT, Keith Miller
no flags
Keith Miller
Comment 1 2017-04-07 20:12:31 PDT
Saam Barati
Comment 2 2017-04-07 21:34:45 PDT
Comment on attachment 306565 [details] Patch Please add a test
Keith Miller
Comment 3 2017-04-07 21:36:00 PDT
There is a test in the spec-tests. I'm planning to import the next round of those tests shortly.
Saam Barati
Comment 4 2017-04-07 22:03:17 PDT
(In reply to Keith Miller from comment #3) > There is a test in the spec-tests. I'm planning to import the next round of > those tests shortly. 👍🏽
WebKit Commit Bot
Comment 5 2017-04-07 22:30:50 PDT
Comment on attachment 306565 [details] Patch Clearing flags on attachment: 306565 Committed r215141: <http://trac.webkit.org/changeset/215141>
WebKit Commit Bot
Comment 6 2017-04-07 22:30:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.