WebAssembly: Fix issue with BrTable targeting a Loop https://bugs.webkit.org/show_bug.cgi?id=170638

Reviewed by Saam Barati.

This fixes the same issue V8 had in: https://github.com/WebAssembly/spec/pull/456#event-1033547537

* wasm/WasmValidate.cpp:
(JSC::Wasm::Validate::ControlData::branchTargetSignature):


Canonical link: https://commits.webkit.org/187567@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215141 268f45cc-cd09-0410-ab3c-d52691b4dbfc